--- a/css/styles.css
+++ b/css/styles.css
@@ -11,13 +11,13 @@ body {
     padding: 0;
 }
 
-/* Nav Bar */
-
+/* Site logo */
 .logo-icon {
     height: 60px;
     width: 60px;
 }
 
+/* Nav Bar */
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -44,28 +44,63 @@ body {
     display: block;
 }
 
+.navbar-links .active {
+    text-decoration: underline;
+}
+
 .toggle-menu {
     position: absolute;
-    top: 1rem;
+    top: 1.8rem;
     right: 1rem;
     display: none;
     flex-direction: column;
     justify-content: space-between;
     width: 30px;
     height: 21px;
+    cursor: pointer;
 }
 
-.toggle-menu .bar {
-    height: 3px;
+/* Hamburger-menu */
+.menu-btn_burger {
     width: 100%;
-    background-color: var(--darkest-green);
+    height: 3px;
+    background: var(--darkest-green);
     border-radius: 10px;
+    transition: all .5s ease-in-out;
 }
 
-.navbar-links .active {
-    text-decoration: underline;
+.menu-btn_burger::before,
+.menu-btn_burger::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    background: var(--darkest-green);
+    border-radius: 10px;
+    transition: all .5s ease-in-out;
 }
 
+.menu-btn_burger::before {
+    transform: translateY(-9px);
+}
+
+.menu-btn_burger::after {
+    transform: translateY(9px);
+}
+
+/* Hamburger-menu animation  */
+.toggle-menu.open .menu-btn_burger {
+    transform: translateX(-50px);
+    background: transparent;
+}
+
+.toggle-menu.open .menu-btn_burger::before {
+    transform: rotate(45deg) translate(35px, -35px);
+}
+
+.toggle-menu.open .menu-btn_burger::after {
+    transform: rotate(-45deg) translate(35px, 35px);
+}
 
 @media (max-width: 600px) {
     .toggle-menu {
@@ -113,7 +148,6 @@ body {
 
 
 /* Loading */
-
 .error {
     border: 1px solid darkred;
     padding: 1rem;
