worked on my featured section

--- a/css/imports/variables.css
+++ b/css/imports/variables.css
@@ -5,6 +5,7 @@
     --darkest-green: #124026;
     --heading-font-family: "Raleway";
     --paragraph-font-family: "Bitter";
+    --font-weight: normal;
     --paragraph-font-size: 16px;
     --h1-size-desktop: 50px;
     --h1-size: 40px;
