contact form and string parameter for blogposts

--- a/css/imports/variables.css
+++ b/css/imports/variables.css
@@ -12,6 +12,7 @@
     --h2-size: 34px;
     --h3-size: 26px;
     --h4-size: 20px;
+    --h5-size: 16px;
     --drop-shadow: 0 1px 5px #a5a4a4;
     --inner-shadow: 0 1px 0 #a5a4a4;
 }
