--- a/css/styles.css
+++ b/css/styles.css
@@ -47,10 +47,18 @@ img {
 /* Nav Bar */
 .navbar {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     box-shadow: var(--drop-shadow);
+    width: 100%;
 }
+
+.nav-child {
+    margin: 0 auto;
+    width: 1200px;
+    display: flex;
+    justify-content: space-between;
+}
+
 
 .navbar-links ul {
     margin: 0;
@@ -92,7 +100,6 @@ img {
 }
 
 /* Hamburger menu  */
-
 .menu-btn_burger {
     width: 100%;
     height: 3px;
@@ -135,8 +142,6 @@ img {
 }
 
 /* Featured Content */
-
-
 .featured-content {
     display: flex;
     justify-content: space-between;
@@ -193,16 +198,19 @@ img {
 }
 
 /* Latest Posts/Slider  */
-.slider-title {
+.slider-title h2 {
+    margin: 100px 0 50px 0;
     text-align: center;
 }
 
-.slider-button {
+/* .slider-button {
     font-size: 60px;
     color: var(--darkest-green);
-}
+} */
 
-.carousel-container {}
+.carousel-container {
+    display: grid;
+}
 
 .carousel {
     display: flex;
@@ -414,8 +422,7 @@ h2 {
 
 /* Popup Modal */
 .modal-container-header,
-.modal-container-gallery,
-.modal-container-gallery-two {
+.modal-container-gallery {
     position: fixed;
     z-index: 10;
     left: 0;
@@ -427,8 +434,8 @@ h2 {
     display: none;
 }
 
-.modal-img img {
-    max-width: 99%;
+.modal-img img,
+.modal-container-gallery img {
     height: auto;
     position: fixed;
     left: 50%;
@@ -436,6 +443,9 @@ h2 {
     transform: translate(-50%, -50%);
     aspect-ratio: 16 / 9;
     overflow: hidden;
+    border: 3px solid white;
+    width: 80%;
+    max-width: 1200px;
 }
 
 .modal-img p {
@@ -565,6 +575,11 @@ label {
 
     .about-image {
         margin: 0;
+    }
+
+    .modal-img img,
+    .modal-container-gallery img {
+        max-width: 99%;
     }
 
 }
