--- a/css/styles.css
+++ b/css/styles.css
@@ -203,20 +203,85 @@ img {
     text-align: center;
 }
 
-/* .slider-button {
-    font-size: 60px;
-    color: var(--darkest-green);
-} */
-
 .carousel-container {
-    display: grid;
+    position: relative;
+    height: 600px;
+    width: 80%;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
-.carousel {
+.carousel_image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.carousel_track-container {
+    background: var(--light-green);
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+}
+
+.carousel_track {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    position: relative;
+    height: 100%;
+    transition: transform 250ms ease-in;
+}
+
+.carousel_slide {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+}
+
+.carousel_button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 75px;
+    background: transparent;
+    border: 0;
+    color: #000;
+    padding: 0;
+    margin: 0;
+}
+
+.carousel_button--left {
+    left: -40px;
+}
+
+.carousel_button--right {
+    right: -40px;
+}
+
+.carousel_nav {
     display: flex;
+    justify-content: center;
+    padding: 10px 0;
 }
 
+.carousel_indicator {
+    border: 0;
+    width: 20px;
+    height: 10px;
+    background: var(--darker-green);
+    padding: 0;
+    margin: 0 8px;
+}
 
+.carousel_indicator.current-slide {
+    background: var(--darkest-green);
+}
+
+.is-hidden {
+    display: none;
+}
 
 /* About Page */
 .about-content {
