--- a/css/styles.css
+++ b/css/styles.css
@@ -203,7 +203,92 @@ img {
     text-align: center;
 }
 
-.carousel-container {
+.carousel_container {
+    margin: 0px auto;
+    object-fit: cover;
+    position: relative;
+    overflow: hidden;
+    width: 80%;
+    max-width: 1200px;
+    height: 600px;
+    scroll-behavior: smooth;
+}
+
+.slides-container {
+    height: calc(100vh - 2rem);
+    width: 100%;
+    list-style: none;
+    overflow: scroll;
+    margin: 0;
+    padding: 0;
+    scroll-behavior: smooth;
+}
+
+.slides-container {
+    scrollbar-width: none;
+    /* Firefox */
+    -ms-overflow-style: none;
+    /* Internet Explorer 10+ */
+}
+
+/* WebKit */
+.slides-container::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+}
+
+.slide_container-wrapper {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 100%);
+    grid-template-rows: 1fr;
+}
+
+.slide-arrow {
+    position: absolute;
+    display: flex;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    height: 4rem;
+    background-color: white;
+    border: none;
+    width: 2rem;
+    font-size: 3rem;
+    padding: 0;
+    transition: opacity 100ms;
+}
+
+.slide-arrow:hover,
+.slide-arrow:focus {
+    opacity: 1;
+}
+
+#slide-arrow-prev {
+    left: 0;
+    padding-left: 0.25rem;
+    border-radius: 0 2rem 2rem 0;
+    color: black;
+}
+
+#slide-arrow-next {
+    right: 0;
+    padding-left: 0.75rem;
+    border-radius: 2rem 0 0 2rem;
+    color: black;
+}
+
+.carousel_image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    aspect-ratio: 16 / 9;
+    object-position: center;
+}
+
+
+/* .carousel-container {
     position: relative;
     height: 600px;
     width: 80%;
@@ -222,6 +307,7 @@ img {
     height: 100%;
     position: relative;
     overflow: hidden;
+
 }
 
 .carousel_track {
@@ -238,6 +324,9 @@ img {
     top: 0;
     bottom: 0;
     width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 100%);
+    grid-template-rows: 1fr;
 }
 
 .carousel_button {
@@ -277,7 +366,7 @@ img {
 
 .carousel_indicator.current-slide {
     background: var(--darkest-green);
-}
+} */
 
 .is-hidden {
     display: none;
