--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,7 @@ img {
     margin: 0;
     padding: 0;
     display: flex;
+    gap: 1px;
 }
 
 .navbar-links li {
@@ -75,16 +76,18 @@ img {
     font-family: var(--heading-font-family);
     font-size: var(--h3-size);
     color: black;
-    padding: 1rem;
+    padding: 16px;
     display: block;
 }
 
-.navbar-links .active {
-    text-decoration: underline;
+.navbar-links .active{
+    /* text-decoration: underline; */
+    background-color: var(--light-green);
 }
 
-.navbar-links li:hover {
+.navbar-links li a:hover {
     background-color: var(--light-green);
+
 }
 
 .toggle-menu {
@@ -215,9 +218,13 @@ img {
     box-shadow: var(--drop-shadow);
 }
 
+.carousel_images {
+    overflow-y: hidden;
+}
+
 .carousel_image {
     width: 100%;
-    height: 450px;
+    height: 415px;
     object-fit: cover;
     aspect-ratio: 16 / 9;
     object-position: center;
@@ -297,86 +304,6 @@ img {
     color: black;
 }
 
-/* .carousel-container {
-    position: relative;
-    height: 600px;
-    width: 80%;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-.carousel_image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.carousel_track-container {
-    background: var(--light-green);
-    height: 100%;
-    position: relative;
-    overflow: hidden;
-
-}
-
-.carousel_track {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    position: relative;
-    height: 100%;
-    transition: transform 250ms ease-in;
-}
-
-.carousel_slide {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(3, 100%);
-    grid-template-rows: 1fr;
-}
-
-.carousel_button {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 75px;
-    background: transparent;
-    border: 0;
-    color: #000;
-    padding: 0;
-    margin: 0;
-}
-
-.carousel_button--left {
-    left: -40px;
-}
-
-.carousel_button--right {
-    right: -40px;
-}
-
-.carousel_nav {
-    display: flex;
-    justify-content: center;
-    padding: 10px 0;
-}
-
-.carousel_indicator {
-    border: 0;
-    width: 20px;
-    height: 10px;
-    background: var(--darker-green);
-    padding: 0;
-    margin: 0 8px;
-}
-
-.carousel_indicator.current-slide {
-    background: var(--darkest-green);
-} */
-
 .is-hidden {
     display: none;
 }
@@ -426,6 +353,7 @@ h3,
 
 .social-media {
     margin: 5px;
+    height: 40px;
 }
 
 /* Blog List Page */
@@ -442,7 +370,7 @@ h3,
 .blog-list-container {
     border-radius: .25rem;
     overflow: hidden;
-    min-height: 460px;
+    min-height: 460px;  
 }
 
 .blog-list-container.card-shadow {
@@ -519,9 +447,20 @@ h2 {
     flex-direction: column;
     max-width: 1200px;
     margin: 0 auto;
-    margin-top: 50px;
+    margin-top: 20px;
     margin-bottom: 50px;
     box-shadow: var(--drop-shadow);
+}
+
+.back-btn {
+    margin-left: 10px;
+    margin-top: 15px;
+}
+
+.back-btn a{
+    color: black;
+    font-family: var(--paragraph-font-family);
+    text-decoration: none;
 }
 
 .post-header {
@@ -778,6 +717,8 @@ label {
 
 }
 
+
+
 @media (max-width: 600px) {
 
     .nav-child {
@@ -821,6 +762,7 @@ label {
 
     .navbar-links.active {
         display: flex;
+        color: black;
     }
 
     .navbar-links li a:hover {
@@ -845,7 +787,6 @@ label {
     .carousel_container {
         width: 95%;
     }
-
 }
 
 @media (max-width: 450px) {
@@ -856,6 +797,7 @@ label {
 
     .blog-list-container {
         border-radius: 0;
+        height: 350px;
     }
 }
 
