--- a/css/styles.css
+++ b/css/styles.css
@@ -218,10 +218,6 @@ img {
     box-shadow: var(--drop-shadow);
 }
 
-.carousel_images {
-    overflow-y: hidden;
-}
-
 .carousel_image {
     width: 100%;
     height: 415px;
@@ -239,7 +235,9 @@ img {
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
-    scroll-snap-type: x mandatory;
+    scroll-snap-type: both mandatory;
+    overflow-y: hidden;
+
 }
 
 .slides-container {
@@ -370,7 +368,7 @@ h3,
 .blog-list-container {
     border-radius: .25rem;
     overflow: hidden;
-    min-height: 460px;  
+    /* min-height: 460px;  */
 }
 
 .blog-list-container.card-shadow {
@@ -699,7 +697,8 @@ label {
 
     .featured-content img {
         width: 100%;
-        padding: 20px;
+        padding: 0;
+        height: 450px;
     }
 
     .featured-text {
@@ -735,7 +734,10 @@ label {
         position: absolute;
         margin-top: 64px;
         width: 100%;
+        animation: fromtop 0.6s;
     }
+
+    @keyframes fromtop {from{top:-10px;opacity:0} to{top:0;opacity:1}}
 
     .navbar {
         flex-direction: column;
@@ -743,7 +745,7 @@ label {
     }
 
     .navbar-links ul {
-        width: 100%;
+        margin: 0 auto;
         flex-direction: column;
     }
 
@@ -751,8 +753,9 @@ label {
         text-align: center;
     }
 
-    .navbar-links li:hover {
+    .navbar-links li a:hover {
         background-color: var(--light-green);
+        color: black;
     }
 
     .navbar-links li a {
@@ -762,13 +765,17 @@ label {
 
     .navbar-links.active {
         display: flex;
-        color: black;
     }
-    
 
-    .navbar-links li a:hover {
-        color: black;
+    .navbar-links .active {
+        /* color: black; */
+        font-weight: bold;
+        font-size: 28px;
+        background-color: var(--darker-green);
+        /* border: 1px solid var(--darkest-green); */
     }
+
+    
 
     /* featured content */
 
