--- a/css/styles.css
+++ b/css/styles.css
@@ -54,7 +54,9 @@ img {
 
 .nav-child {
     margin: 0 auto;
-    width: 1200px;
+    padding-top: 3px;
+    width: 90%;
+    max-width: 1200px;
     display: flex;
     justify-content: space-between;
 }
@@ -80,7 +82,7 @@ img {
     display: block;
 }
 
-.navbar-links .active{
+.navbar-links .active {
     /* text-decoration: underline; */
     background-color: var(--light-green);
 }
@@ -213,7 +215,7 @@ img {
     overflow: hidden;
     width: 80%;
     max-width: 1200px;
-    max-height: 600px;
+    max-height: 540px;
     scroll-behavior: smooth;
     box-shadow: var(--drop-shadow);
 }
@@ -382,8 +384,8 @@ h3,
 }
 
 .posts-header {
+    margin: 50px auto;
     text-align: center;
-    margin: 50px 0;
 }
 
 .card-header.card-image {
@@ -424,6 +426,36 @@ h2 {
     padding: 0 10px 0 10px;
 }
 
+/* Search input */
+.search-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: var(--light-green);
+    padding: 10px 0;
+    max-width: 1200px;
+    width: 90%;
+    margin: 0 auto 20px auto;
+}
+
+.search-wrapper input {
+    max-width: 200px;
+    font-size: 16px;
+    font-family: var(--heading-font-family);
+}
+
+.search-wrapper label {
+    font-family: var(--heading-font-family);
+    font-size: var(--h3-size);
+    margin: 0px;
+}
+
+.hide {
+    display: none;
+}
+
+#search {}
+
 /* View more button */
 #viewMoreBtn {
     display: flex;
@@ -455,7 +487,7 @@ h2 {
     margin-top: 15px;
 }
 
-.back-btn a{
+.back-btn a {
     color: black;
     font-family: var(--paragraph-font-family);
     text-decoration: none;
@@ -533,6 +565,23 @@ h2 {
     background-color: rgba(0, 0, 0, 0.9);
     display: none;
 }
+
+.nav-modal-container {
+    position: fixed;
+    z-index: 9;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 90%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: none;
+}
+
+/* .nav-bar-modal {
+    width: 100%;
+    height: 100%;
+} */
 
 .modal-img img,
 .modal-container-gallery img {
@@ -692,7 +741,6 @@ label {
 @media (max-width: 750px) {
     .featured-content {
         flex-direction: column;
-
     }
 
     .featured-content img {
@@ -716,8 +764,6 @@ label {
 
 }
 
-
-
 @media (max-width: 600px) {
 
     .nav-child {
@@ -729,15 +775,26 @@ label {
     }
 
     .navbar-links {
+        z-index: 10;
         display: none;
         background: var(--darker-green);
         position: absolute;
         margin-top: 64px;
         width: 100%;
-        animation: fromtop 0.6s;
+        animation: fromtop 0.4s;
     }
 
-    @keyframes fromtop {from{top:-10px;opacity:0} to{top:0;opacity:1}}
+    @keyframes fromtop {
+        from {
+            top: 0px;
+            opacity: 0;
+        }
+
+        to {
+            top: 3px;
+            opacity: 1;
+        }
+    }
 
     .navbar {
         flex-direction: column;
@@ -775,7 +832,7 @@ label {
         /* border: 1px solid var(--darkest-green); */
     }
 
-    
+
 
     /* featured content */
 
@@ -801,6 +858,8 @@ label {
     .posts-container {
         margin: 0 auto;
         width: 98%;
+        display: flex;
+        flex-direction: column
     }
 
     .blog-list-container {
